021: change button color

--- a/index.html
+++ b/index.html
@@ -55,42 +55,42 @@
         <button onclick="app.setUserData()" class="fluid ui button teal">Send Users Data</button>
         <button onclick="app.userData.setProperty()" class="fluid ui button teal">UserData.setProperty</button>
         <button onclick="app.userData.increment()" class="fluid ui button teal">UserData.increment</button>
-        <button onclick="app.userData.incrementBy()" class="fluid ui button orange">UserData.incrementBy</button>
-        <button onclick="app.userData.multiply()" class="fluid ui button yellow">UserData.multiply</button>
-        <button onclick="app.userData.saveMax()" class="fluid ui button olive">UserData.saveMax</button>
-        <button onclick="app.userData.saveMin()" class="fluid ui button orange">UserData.saveMin</button>
-        <button onclick="app.userData.setOnce()" class="fluid ui button blue">UserData.setOnce</button>
-        <button onclick="app.userData.pushUniqueValue()" class="fluid ui button olive">UserData.pushUniqueValue</button>
-        <button onclick="app.userData.pushValue()" class="fluid ui button orange">UserData.pushValue</button>
-        <button onclick="app.userData.pullValue()" class="fluid ui button blue">UserData.pullValue</button>
+        <button onclick="app.userData.incrementBy()" class="fluid ui button teal">UserData.incrementBy</button>
+        <button onclick="app.userData.multiply()" class="fluid ui button teal">UserData.multiply</button>
+        <button onclick="app.userData.saveMax()" class="fluid ui button teal">UserData.saveMax</button>
+        <button onclick="app.userData.saveMin()" class="fluid ui button teal">UserData.saveMin</button>
+        <button onclick="app.userData.setOnce()" class="fluid ui button teal">UserData.setOnce</button>
+        <button onclick="app.userData.pushUniqueValue()" class="fluid ui button teal">UserData.pushUniqueValue</button>
+        <button onclick="app.userData.pushValue()" class="fluid ui button teal">UserData.pushValue</button>
+        <button onclick="app.userData.pullValue()" class="fluid ui button teal">UserData.pullValue</button>
         <div class="ui horizontal divider">User Methods End</div>
         <div class="ui horizontal divider">Remote Config Methods Start</div>
-        <button onclick="app.setRemoteConfigAutomaticDownload()" class="fluid ui button black">Countly.setRemoteConfigAutomaticDownload</button>
-        <button onclick="app.remoteConfigUpdate()" class="fluid ui button grey">Countly.remoteConfigUpdate</button>
-        <button onclick="app.updateRemoteConfigForKeysOnly()" class="fluid ui button brown">Countly.updateRemoteConfigForKeysOnly</button>
-        <button onclick="app.updateRemoteConfigExceptKeys()" class="fluid ui button pink">Countly.updateRemoteConfigExceptKeys</button>
-        <button onclick="app.remoteConfigClearValues()" class="fluid ui button purple">Countly.remoteConfigClearValues</button>
+        <button onclick="app.setRemoteConfigAutomaticDownload()" class="fluid ui button blue">Countly.setRemoteConfigAutomaticDownload</button>
+        <button onclick="app.remoteConfigUpdate()" class="fluid ui button blue">Countly.remoteConfigUpdate</button>
+        <button onclick="app.updateRemoteConfigForKeysOnly()" class="fluid ui button blue">Countly.updateRemoteConfigForKeysOnly</button>
+        <button onclick="app.updateRemoteConfigExceptKeys()" class="fluid ui button blue">Countly.updateRemoteConfigExceptKeys</button>
+        <button onclick="app.remoteConfigClearValues()" class="fluid ui button blue">Countly.remoteConfigClearValues</button>
         
-        <button onclick="app.updateRemoteConfigForbooleanValueOnly()" class="fluid ui button orange">Boolean Test</button>
-        <button onclick="app.updateRemoteConfigForfloatValueOnly()" class="fluid ui button yellow">Float Test</button>
+        <button onclick="app.updateRemoteConfigForbooleanValueOnly()" class="fluid ui button blue">Boolean Test</button>
+        <button onclick="app.updateRemoteConfigForfloatValueOnly()" class="fluid ui button blue">Float Test</button>
         <button onclick="app.updateRemoteConfigForintegerValueOnly()" class="fluid ui button blue">Integer Test</button>
-        <button onclick="app.updateRemoteConfigForstringValueOnly()" class="fluid ui button green">String Test</button>
+        <button onclick="app.updateRemoteConfigForstringValueOnly()" class="fluid ui button blue">String Test</button>
 
         <div class="ui horizontal divider">Remote Config Methods End</div>
         <div class="ui horizontal divider">Other Methods Start</div>
-        <button onclick="app.askForNotificationPermission()" class="fluid ui button teal">askForNotificationPermission</button>
+        <button onclick="app.askForNotificationPermission()" class="fluid ui button yellow">askForNotificationPermission</button>
         <!-- <button onclick="app.sendPushToken()" class="fluid ui button teal">Push Message</button> -->
         <!-- <button onclick="app.testAndroidPush()" class="fluid ui button teal">Push Test Android</button> -->
         <!-- <button onclick="app.testiOSPush()" class="fluid ui button teal">Push Test iOS</button> -->
-        <button onclick="app.changeDeviceId()" class="fluid ui button">Change Device ID</button>
-        <button onclick="app.enableParameterTamperingProtection('123456')" class="fluid ui button">Enable Parameter Tapmering Protection</button>
-        <button onclick="app.setOptionalParametersForInitialization()" class="fluid ui button">City, State, and Location</button>
-        <button onclick="app.addCrashLog()" class="fluid ui button">Send Crash Report</button>
+        <button onclick="app.changeDeviceId()" class="fluid ui button yellow">Change Device ID</button>
+        <button onclick="app.enableParameterTamperingProtection('123456')" class="fluid ui button yellow">Enable Parameter Tapmering Protection</button>
+        <button onclick="app.setOptionalParametersForInitialization()" class="fluid ui button yellow">City, State, and Location</button>
+        <button onclick="app.addCrashLog()" class="fluid ui button yellow">Send Crash Report</button>
         <div class="ui horizontal divider">Other Methods End</div>
         <div class="ui horizontal divider">Rating Methods Start</div>
         <!-- <button onclick="app.sendRating()" class="fluid ui button">Send 5 star rating!!</button> -->
-        <button onclick="app.askForStarRating()" class="fluid ui button">Open rating modal</button>
-        <button onclick="app.askForFeedback()" class="fluid ui button">Open feedback modal</button>
+        <button onclick="app.askForStarRating()" class="fluid ui button orange">Open rating modal</button>
+        <button onclick="app.askForFeedback()" class="fluid ui button orange">Open feedback modal</button>
         <div class="ui horizontal divider">Rating Methods End</div>
     </div>
     <script type="text/javascript">
