change userdata.pullValue name

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         Countly.userData.pushValue("pushValue", "morning");
     }
     app.userData.pullValue = function() {
-        Countly.userData.pullValue("pushValue", "morning");
+        Countly.userData.pullValue("pullValue", "morning");
     }
 
 //setRequiresConsent
