iOS missing method added: setHttpPostForced

--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
     app.init = function() {
         Countly.pushTokenType(Countly.messagingMode["TEST"]);
         Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5");
-        Countly.eventSendThreshold(1);
+        // Countly.eventSendThreshold(1);
         Countly.setLoggingEnabled();
     };
     app.initWithID = function(){
         Countly.pushTokenType(Countly.messagingMode["TEST"]);
-        Countly.init("https://trinisoft.count.ly", "0e8a00e8c0139f0b2ac6919f718a13821575db28c0e2971e05ec55a0af8be0e55da05a404bb23c3e", makeid());
-        Countly.eventSendThreshold(1);
+        Countly.init("https://trinisoft.count.ly", "f0b2ac6919f718a13821575db28c0e2971e05ec5", makeid());
+        // Countly.eventSendThreshold(1);
         Countly.setLoggingEnabled();
     }
     // app.test = function() {
