--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
             "key": "Event With Segment",
             "count": 1
         };
-        event.segmentation = {
+        event.segments = {
             "Country": "Turkey",
             "Age": "28"
         };
@@ -245,7 +245,7 @@
             "count": 1,
             "sum": "0.99"
         };
-        event.segmentation = {
+        event.segments = {
             "Country": "Turkey",
             "Age": "28"
         };
@@ -257,9 +257,9 @@
             "key": "Event With Sum And Segment duration",
             "count": 1,
             "sum": "0.99",
-            "duration":"0"
+            "duration":"1000"
         };
-        event.segmentation = {
+        event.segments = {
             "Country": "Turkey",
             "Age": "28"
         };
